fix spacing betweeen tutorials

--- a/static/next/css/help.css
+++ b/static/next/css/help.css
@@ -1,12 +1,13 @@
-main ul{
+main ul {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   list-style: none;
   padding: 1em;
+  gap: 1em;
 }
-main ul button{
+main ul button {
   padding: 1em;
   width: 50vw;
 }
